--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,7 @@
     ],
     "require-dev": {
         "orchestra/testbench": "^9.0",
-        "phpstan/phpstan": "^1.10",
+        "phpstan/phpstan": "^2.0",
         "phpunit/phpunit": "^10.5"
     },
     "extra": {
@@ -36,7 +36,9 @@
     "require": {
         "php": ">8.3",
         "ext-intl": "*",
+        "ext-apcu": "*",
         "guzzlehttp/guzzle": "^7.8",
-        "timacdonald/log-fake": "^v2.3.0"
+        "timacdonald/log-fake": "^v2.3.0",
+        "promphp/prometheus_client_php": "^2.14"
     }
 }
