--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -17,21 +17,15 @@ jobs:
 
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
 
-      - name: Setup PHP
-        uses: shivammathur/setup-php@v2
-        with:
-          coverage: "none"
-          php-version: "${{ matrix.php }}"
-          ini-file: development
-          tools: composer:v2
-
-      - name: Install dependencies
-        run: composer update --ansi --no-progress
+      - name: Docker compose
+        env:
+          PHP_VERSION: ${{ matrix.php }}
+        run: docker compose up -d
 
       - name: Run tests
-        run: vendor/bin/phpunit
+        run: docker compose exec package vendor/bin/phpunit
 
   static_analysis:
     name: Static analysis
@@ -39,17 +33,10 @@ jobs:
 
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
 
-      - name: Setup PHP
-        uses: shivammathur/setup-php@v2
-        with:
-          coverage: "none"
-          php-version: "8.3"
-          ini-file: development
-
-      - name: Install dependencies
-        run: composer update --ansi --no-progress
+      - name: Build
+        run: docker build -t app .
 
       - name: Run phpstan
-        run: vendor/bin/phpstan analyse --ansi --no-progress
+        run: docker run package vendor/bin/phpstan analyse --memory-limit=1G
