--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -20,9 +20,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Build
-        env:
-          PHP_VERSION: ${{ matrix.php }}
-        run: docker build -t package .
+        run: docker build -t package --build-arg PHP_VERSION=${{ matrix.php }} .
 
       - name: Run tests
         run: docker run package vendor/bin/phpunit
@@ -36,7 +34,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Build
-        run: docker build -t app .
+        run: docker build -t package .
 
       - name: Run phpstan
         run: docker run package vendor/bin/phpstan analyse --memory-limit=1G
