--- a/compose.yaml
+++ b/compose.yaml
@@ -6,5 +6,11 @@ services:
         PHP_VERSION: ${PHP_VERSION:-8.4}
     tty: true
     volumes:
-      - .:/app
-      - /app/vendor
+      - ./src:/app/src
+      - ./tests:/app/tests
+      - ./types:/app/types
+      - ./composer.json:/app/composer.json
+      - ./composer.lock:/app/composer.lock
+      - ./phpunit.xml:/app/phpunit.xml
+      - ./phpstan.neon:/app/phpstan.neon
+      - ./extension.neon:/app/extension.neon
