--- a/composer.json
+++ b/composer.json
@@ -42,6 +42,7 @@
         "symfony/security-bundle": "^7.2",
         "illuminate/encryption": "*",
         "symfony/http-client": "^7.2",
-        "symfony/expression-language": "^7.2"
+        "symfony/expression-language": "^7.2",
+        "symfony/twig-bundle": "^7.2"
     }
 }
