--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,9 @@
     "require-dev": {
         "orchestra/testbench": "^9.0",
         "phpstan/phpstan": "^2.1.4",
-        "phpunit/phpunit": "^10.5"
+        "phpunit/phpunit": "^10.5",
+        "symfony/dependency-injection": "^7.2",
+        "symfony/config": "^7.2"
     },
     "extra": {
         "laravel": {
