--- a/composer.json
+++ b/composer.json
@@ -48,6 +48,7 @@
         "symfony/http-client": "^7.2",
         "symfony/expression-language": "^7.2",
         "symfony/twig-bundle": "^7.2",
-        "symfony/ux-twig-component": "^2.24"
+        "symfony/ux-twig-component": "^2.24",
+        "symfony/validator": "^7.2"
     }
 }
