--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,8 @@
         "phpstan/phpstan": "^2.1.7",
         "phpunit/phpunit": "^10.5",
         "symfony/dependency-injection": "^7.2",
-        "symfony/config": "^7.2"
+        "symfony/config": "^7.2",
+        "symfony/framework-bundle": "^7.2"
     },
     "extra": {
         "laravel": {
