--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,8 @@
         "phpunit/phpunit": "^10.5",
         "symfony/dependency-injection": "^7.2",
         "symfony/config": "^7.2",
-        "symfony/framework-bundle": "^7.2"
+        "symfony/framework-bundle": "^7.2",
+        "symfony/browser-kit": "^7.3"
     },
     "extra": {
         "laravel": {
