--- a/compose.yaml
+++ b/compose.yaml
@@ -7,6 +7,7 @@ services:
     tty: true
     volumes:
       - ./src:/app/src
+      - ./bundle:/app/bundle
       - ./tests:/app/tests
       - ./types:/app/types
       - ./composer.json:/app/composer.json
