--- a/composer.json
+++ b/composer.json
@@ -50,6 +50,7 @@
         "symfony/expression-language": "^7.2",
         "symfony/twig-bundle": "^7.2",
         "symfony/ux-twig-component": "^2.24",
-        "symfony/validator": "^7.2"
+        "symfony/validator": "^7.2",
+        "firebase/php-jwt": "^6.11"
     }
 }
