--- a/composer.json
+++ b/composer.json
@@ -50,7 +50,9 @@
         "symfony/expression-language": "^7.2",
         "symfony/twig-bundle": "^7.2",
         "symfony/ux-twig-component": "^2.24",
-        "symfony/validator": "^7.2",
-        "firebase/php-jwt": "^6.11"
+        "symfony/validator": "^7.3",
+        "firebase/php-jwt": "^6.11",
+        "symfony/orm-pack": "^2.4",
+        "symfony/serializer-pack": "^1.3"
     }
 }
