OpenID Connect Login (#38)
* DataCarryingHttpException

* wip

* wip openid

* wip

* parse ID token

* wip

* wip

* OIDC wip

* wip

* wip

* testing wip

* OidcController 100% coverage

* more tests, PHPStan done

* wip

* wip

* all tests passing

* OIDC Auth Test

* 100%  coverage

* CHANGELOG

--- a/compose.yaml
+++ b/compose.yaml
@@ -8,6 +8,7 @@ services:
     volumes:
       - ./bundle:/app/bundle
       - ./src:/app/src
+      - ./bundle:/app/bundle
       - ./tests:/app/tests
       - ./types:/app/types
       - ./composer.json:/app/composer.json
