--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,8 @@
         "symfony/dependency-injection": "^7.2",
         "symfony/config": "^7.2",
         "symfony/framework-bundle": "^7.2",
-        "symfony/browser-kit": "^7.3"
+        "symfony/browser-kit": "^7.3",
+        "zenstruck/foundry": "^2.6"
     },
     "extra": {
         "laravel": {
