--- a/composer.json
+++ b/composer.json
@@ -54,6 +54,7 @@
         "symfony/validator": "^7.3",
         "firebase/php-jwt": "^6.11",
         "symfony/orm-pack": "^2.4",
-        "symfony/serializer-pack": "^1.3"
+        "symfony/serializer-pack": "^1.3",
+        "symfony/scheduler": "^7.3"
     }
 }
