--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,8 @@
         "symfony/config": "^7.2",
         "symfony/framework-bundle": "^7.2",
         "symfony/browser-kit": "^7.3",
-        "zenstruck/foundry": "^2.6"
+        "zenstruck/foundry": "^2.6",
+        "symfony/messenger": "^7.3"
     },
     "extra": {
         "laravel": {
