--- a/composer.json
+++ b/composer.json
@@ -26,12 +26,13 @@
         "orchestra/testbench": "^9.0",
         "phpstan/phpstan": "^2.1.7",
         "phpunit/phpunit": "^10.5",
-        "symfony/dependency-injection": "^7.2",
-        "symfony/config": "^7.2",
-        "symfony/framework-bundle": "^7.2",
-        "symfony/browser-kit": "^7.3",
+        "symfony/dependency-injection": "8.0.*",
+        "symfony/config": "8.0.*",
+        "symfony/framework-bundle": "8.0.*",
+        "symfony/browser-kit": "8.0.*",
         "zenstruck/foundry": "^2.6",
-        "symfony/messenger": "^7.3"
+        "symfony/messenger": "8.0.*",
+        "zenstruck/messenger-test": "^1.13"
     },
     "extra": {
         "laravel": {
@@ -48,14 +49,14 @@
         "timacdonald/log-fake": "^v2.3.0",
         "promphp/prometheus_client_php": "^2.14",
         "illuminate/encryption": "*",
-        "symfony/http-client": "^7.2",
-        "symfony/expression-language": "^7.2",
-        "symfony/twig-bundle": "^7.2",
+        "symfony/http-client": "8.0.*",
+        "symfony/expression-language": "8.0.*",
+        "symfony/twig-bundle": "8.0.*",
         "symfony/ux-twig-component": "^2.24",
-        "symfony/validator": "^7.3",
+        "symfony/validator": "8.0.*",
         "firebase/php-jwt": "^6.11",
         "symfony/orm-pack": "^2.4",
         "symfony/serializer-pack": "^1.3",
-        "symfony/scheduler": "^7.3"
+        "symfony/scheduler": "8.0.*"
     }
 }
