--- a/composer.json
+++ b/composer.json
@@ -45,6 +45,7 @@
         "php": ">=8.3",
         "ext-intl": "*",
         "ext-apcu": "*",
+        "ext-openssl": "*",
         "guzzlehttp/guzzle": "^7.8",
         "promphp/prometheus_client_php": "^2.14",
         "illuminate/encryption": "*",
