--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,6 @@
         "symfony/framework-bundle": "8.0.*",
         "symfony/browser-kit": "8.0.*",
         "zenstruck/foundry": "^2.6",
-        "symfony/messenger": "8.0.*",
         "zenstruck/messenger-test": "^1.13"
     },
     "extra": {
@@ -57,6 +56,7 @@
         "firebase/php-jwt": "^6.11",
         "symfony/orm-pack": "^2.4",
         "symfony/serializer-pack": "^1.3",
-        "symfony/scheduler": "8.0.*"
+        "symfony/scheduler": "8.0.*",
+        "symfony/messenger": "8.0.*"
     }
 }
