--- a/composer.json
+++ b/composer.json
@@ -29,9 +29,7 @@
         "symfony/dependency-injection": "^7.4 || ^8.0",
         "symfony/config": "^7.4 || ^8.0",
         "symfony/framework-bundle": "^7.4 || ^8.0",
-        "symfony/browser-kit": "^7.4 || ^8.0",
-        "zenstruck/foundry": "^2.6",
-        "zenstruck/messenger-test": "^1.13"
+        "symfony/browser-kit": "^7.4 || ^8.0"
     },
     "extra": {
         "laravel": {
@@ -57,6 +55,8 @@
         "symfony/orm-pack": "^2.4",
         "symfony/serializer-pack": "^1.3",
         "symfony/scheduler": "^7.4 || ^8.0",
-        "symfony/messenger": "^7.4 || ^8.0"
+        "symfony/messenger": "^7.4 || ^8.0",
+        "zenstruck/foundry": "^2.6",
+        "zenstruck/messenger-test": "^1.13"
     }
 }
