--- a/composer.json
+++ b/composer.json
@@ -26,13 +26,10 @@
         "orchestra/testbench": "^9.0",
         "phpstan/phpstan": "^2.1.7",
         "phpunit/phpunit": "^10.5",
-        "symfony/dependency-injection": "8.0.*",
-        "symfony/config": "8.0.*",
-        "symfony/framework-bundle": "8.0.*",
-        "symfony/browser-kit": "8.0.*",
-        "zenstruck/foundry": "^2.6",
-        "symfony/messenger": "8.0.*",
-        "zenstruck/messenger-test": "^1.13"
+        "symfony/dependency-injection": "^7.4 || ^8.0",
+        "symfony/config": "^7.4 || ^8.0",
+        "symfony/framework-bundle": "^7.4 || ^8.0",
+        "symfony/browser-kit": "^7.4 || ^8.0"
     },
     "extra": {
         "laravel": {
@@ -49,14 +46,17 @@
         "guzzlehttp/guzzle": "^7.8",
         "promphp/prometheus_client_php": "^2.14",
         "illuminate/encryption": "*",
-        "symfony/http-client": "8.0.*",
-        "symfony/expression-language": "8.0.*",
-        "symfony/twig-bundle": "8.0.*",
+        "symfony/http-client": "^7.4 || ^8.0",
+        "symfony/expression-language": "^7.4 || ^8.0",
+        "symfony/twig-bundle": "^7.4 || ^8.0",
         "symfony/ux-twig-component": "^2.24",
-        "symfony/validator": "8.0.*",
+        "symfony/validator": "^7.4 || ^8.0",
         "firebase/php-jwt": "^6.11",
         "symfony/orm-pack": "^2.4",
         "symfony/serializer-pack": "^1.3",
-        "symfony/scheduler": "8.0.*"
+        "symfony/scheduler": "^7.4 || ^8.0",
+        "symfony/messenger": "^7.4 || ^8.0",
+        "zenstruck/foundry": "^2.6",
+        "zenstruck/messenger-test": "^1.13"
     }
 }
